--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 	<br>
 	<br>
-	<a class="btn btn-secondary" href="public/uploadMovie.html">Upload Movie</a>
+	<a class="btn btn-secondary" href="public/uploadMovie.html"><i class="fa fa-fw fa-upload"></i>Upload Movie</a>
 	<br>
 	<br>
 	<table class="table">
@@ -56,8 +56,8 @@
 				<td>Action/Sci-Fi</td>
 				<td>PG-13</td>
 				<td>
-					<button class="btn btn-primary">Edit</button>
-					<button class="btn btn-danger">Delete</button>
+					<button class="btn btn-primary"><i class="fa fa-fw fa-pencil-square-o"></i>Edit</button>
+					<button class="btn btn-danger"><i class="fa fa-fw fa-trash-o"></i>Delete</button>
 				</td>
 			</tr>
 			<tr>
@@ -69,8 +69,8 @@
 				<td>Action/Fantasy</td>
 				<td>PG-16</td>
 				<td>
-					<button class="btn btn-primary">Edit</button>
-					<button class="btn btn-danger">Delete</button>
+					<button class="btn btn-primary"><i class="fa fa-fw fa-pencil-square-o"></i>Edit</button>
+					<button class="btn btn-danger"><i class="fa fa-fw fa-trash-o"></i>Delete</button>
 				</td>
 			</tr>
 		</tbody>
